# beautiful-laptops

./: .gitignore  Cargo.toml  README.md  annotations_template.csv  normalization_stats.json
src/: data.rs  dataset.rs  inference.rs  main.rs  model.rs  training.rs
