[package]
name = "beautiful-laptops"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["wgpu", "dataset", "network", "vision", "train"] }
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
serde = "1.0.215"
clap = {version = "4.5.21", features = ["cargo"]}
image = "0.25.5"
rayon = "1.10.0"